# no_std_data

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.tours/: 000_navigation.tour  001_assignment.tour  002_utils.tour  003_test_harness.tour  00_overview_navigation.tour  01_assignment_overview.tour
00_test_harness/: Cargo.toml  rust-toolchain.toml
01-ret_tok-rnd-modify_any-store-own-vec-string/: Cargo.toml
01_ok_heap-string/: Cargo.toml
01_on_heap-bytes-own_mut-string/: Cargo.toml
01_on_heap-string/: Cargo.toml
02-ret_tok-rnd-modify_any-store-own-arr-const_overall-limit-chars/: Cargo.toml
02_no_heap-array-const_limit-chars/: Cargo.toml
02_no_heap-chars-own_mut-array-const_overall-limit/: Cargo.toml
03-ret_tok-rnd-modify_any-store-own-arr-const_overall-limit/: Cargo.toml
03_no_heap-array-const_limit-bytes/: Cargo.toml
03_no_heap-array-const_limit-bytes-wipe_on_mut/: Cargo.toml
03_no_heap-bytes-own_mut-array-const_overall-limit/: Cargo.toml
03_no_heap-bytes-own_mut-array-const_overall-limit-wipe_on_mut/: Cargo.toml
04-ret_tok-rnd-modify_any-store-own-arr-const_overall-limit-unsafe/: Cargo.toml
04_no_heap-array-const_generic_exact-bytes/: Cargo.toml
04_no_heap-array-const_limit-bytes-wipe_on_clone/: Cargo.toml
04_no_heap-array-const_limit-bytes-wipe_on_mut/: Cargo.toml
04_no_heap-bytes-own_mut-array-const_overall-limit-unsafe_str/: Cargo.toml
04_no_heap-bytes-own_mut-array-const_overall-limit-wipe_on_clone/: Cargo.toml
05-ret_tok-rnd-modify_any-store-own-arr-const_generic-exact/: Cargo.toml
05_no_heap-array-const_generic_limit-bytes/: Cargo.toml
05_no_heap-array-const_limit-bytes-wipe_on_clone-unsafe/: Cargo.toml
05_no_heap-bytes-own_mut-array-const_generic-exact/: Cargo.toml
05_no_heap-bytes-own_mut-array-const_overall-limit-wipe_on_clone-unsafe/: Cargo.toml
06-ret_tok-rnd-modify_any-store-own-arr-const_generic-limit/: Cargo.toml
06_no_heap-array-const_generic_exact-bytes/: Cargo.toml
06_no_heap-array-const_generic_limit-bytes-wipe_on_clone/: Cargo.toml
06_no_heap-bytes-own_mut-array-const_generic-limit/: Cargo.toml
06_no_heap-slice-pass_in-bytes/: Cargo.toml
07-ret_tok-rnd-modify_any-store-mut-slc-pass_in_storage/: Cargo.toml
07_no_heap-array-const_generic_limit-bytes-wipe_on_mut/: Cargo.toml
07_no_heap-bytes-own_mut-array-const_generic-limit-wipe_on_mut/: Cargo.toml
07_ok_heap-slices_static-box_dyn_trait-map/: Cargo.toml
08-ret_tok-rnd-modify_ini-store-mix-slc-pass_in_storage-macro/: Cargo.toml
08_no_heap-array-const_generic_limit-bytes-wipe_on_clone/: Cargo.toml
08_no_heap-bytes-own_mut-array-const_generic-limit-wipe_on_clone/: Cargo.toml
08_no_heap-slices-iterator_enum/: Cargo.toml
09-ret_tok-seq-non_modify-trans-shr-box-dyn-map/: Cargo.toml
09_no_heap-bytes-ref_mut-slice-pass_in_storage-mut_anytime/: Cargo.toml
09_no_heap-slice-pass_in-bytes-wipe_on_mut/: Cargo.toml
09_no_heap-slices-iterator_impl/: Cargo.toml
10-ret_tok-seq-non_modify-trans-shr-ref-sta-iter_enum/: Cargo.toml
10_no_heap-bytes-ref_mix-slice-pass_in_storage-mut_initial-macro/: Cargo.toml
10_no_heap-eq_branch_iterators-dyn_trait/: Cargo.toml
10_no_heap-slice-pass_in-bytes-wipe_on_drop/: Cargo.toml
10_no_heap-slice-pass_in_storage-mut_once-macro-bytes/: Cargo.toml
10_ok_heap-slices-box_dyn_trait-map/: Cargo.toml
11-ret_tok-seq-non_modify-trans-shr-ref-sta-iter_impl/: Cargo.toml
11_no_heap-bytes-ref_shr-slice-dispatch_sta-iterator_impl/: Cargo.toml
11_no_heap-eq_branch_iterators-matrix/: Cargo.toml
11_ok_heap-slices-box_dyn_trait-map/: Cargo.toml
11_on_heap-bytes-ref_shr-slice-dispatch_dyn-map/: Cargo.toml
11_on_heap-slices-box_dyn_trait-map/: Cargo.toml
12-ret_tok-seq-non_modify-trans-shr-ref-dyn-eq_iters_assign/: Cargo.toml
12_no_heap-bytes-ref_shr-slice-dispatch_sta-iterator_enum/: Cargo.toml
12_no_heap-eq_iterator_to_generic_fn/: Cargo.toml
12_no_heap-slices-iterator_enum/: Cargo.toml
13-coupled-seq-non_modify-trans-shr-ref-sta-eq_iters_matrix/: Cargo.toml
13_no_heap-bytes-ref_shr-slice-dispatch_sta-eq_branch_iterators-matrix/: Cargo.toml
13_no_heap-eq_dispatch_specialized/: Cargo.toml
13_no_heap-slices-iterator_impl/: Cargo.toml
14-coupled-seq-non_modify-trans-shr-ref-sta-eq_iter_to_specialized/: Cargo.toml
14_no_heap-bytes-ref_shr-slice-dispatch_dyn-eq_branch_iterators/: Cargo.toml
14_no_heap-bytes-ref_shr-slice-dispatch_sta-eq_iterator_to_generic_fn/: Cargo.toml
14_no_heap-eq_branch_iterators-dyn_trait/: Cargo.toml
test_compile_on_stable/: Cargo.toml  rust-toolchain.toml
(+217 files in other folders)
